<resources>
    <string name="app_name">Personal Banking</string>
    <string name="action_settings">Settings</string>
    <string name="label_welcome">Welcome to your personal banking app</string>
    <string name="label_get_started">Lets get started by adding your current balance
    and setting a password</string>
    <string name="label_category">Category</string>
    <string name="label_amount">Amount</string>
    <string name="label_description">Description</string>
    <string name="label_source">Source</string>
    <string name="hint_current_balance">Current Balance</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="action_continue">Continue</string>
    <string name="action_add">Add</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_activity_main">Transactions</string>
    <string name="title_activity_new_transaction">New Transaction</string>
    <string name="title_activity_categories">Categories</string>
    <string name="title_activity_sources">Sources</string>

    <string name="new_category">New Category</string>
    <string name="hint_category_name">Category Name</string>
    <string name="new_category_confirmation">Category Added</string>

    <string name="new_source">New Source</string>
    <string name="hint_source_name">Category Name</string>
    <string name="new_source_confirmation">Source Added</string>
</resources>
